--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<section>
+    <li>
+        hi
+    </li>
+</section>
 <body>
     <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quam cum in nemo saepe ipsum libero! Quisquam doloribus debitis eius ipsam eligendi magni natus nemo facilis quasi maiores, veniam inventore.</P>
 </body>
